--- a/modules/web/package.json
+++ b/modules/web/package.json
@@ -7,7 +7,8 @@
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "node devServer.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-preset-stage-1": "^6.5.0",
+    "browserify": "^13.0.1",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
@@ -49,14 +51,19 @@
     "file-loader": "0.8.5",
     "immutable": "3.7.6",
     "json-loader": "0.5.4",
+    "karma-browserify": "^5.0.5",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^0.1.0",
     "moment": "2.11.2",
     "node-sass": "3.4.2 ",
     "react-motion": "0.4.0",
     "react-swipeable-views": "0.4.0",
+    "rewireify": "^0.2.5",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "0.5.7",
+    "watchify": "^3.7.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
@@ -67,6 +74,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bootstrap": "3.3.6",
     "classnames": "^2.1.2",
+    "expect": "^1.20.1",
     "font-awesome": "4.5.0",
     "history": "1.13.x",
     "jquery": "2.2.0",
@@ -78,7 +86,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.3",
     "react-router": "2.0.0",
-    "react-tap-event-plugin": "^0.2.0",
+    "reactify": "^1.1.1",
     "superagent": "1.7.2"
   }
 }
