--- a/modules/web/package.json
+++ b/modules/web/package.json
@@ -54,6 +54,7 @@
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^0.1.0",
+    "less-loader": "^2.2.3",
     "moment": "2.11.2",
     "node-sass": "3.4.2 ",
     "react-motion": "0.4.0",
