--- a/modules/service/pom.xml
+++ b/modules/service/pom.xml
@@ -124,7 +124,21 @@
             <artifactId>commons-codec</artifactId>
             <version>1.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.3.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.3.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -191,8 +205,8 @@
                                             <value>-Xdebug</value>
                                         </property>
                                         <!--<property>-->
-                                            <!--<name>wrapper.java.additional.4</name>-->
-                                            <!--<value>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</value>-->
+                                        <!--<name>wrapper.java.additional.4</name>-->
+                                        <!--<value>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</value>-->
                                         <!--</property>-->
                                         <property>
                                             <name>configuration.directory.in.classpath.first</name>
