--- a/modules/web/package.json
+++ b/modules/web/package.json
@@ -74,6 +74,7 @@
     "alt-container": "1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bootstrap": "3.3.6",
+    "chart.js": "^1.1.1",
     "classnames": "^2.1.2",
     "expect": "^1.20.1",
     "font-awesome": "4.5.0",
@@ -83,6 +84,7 @@
     "material-ui": "^0.14.4",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "0.14.6",
+    "react-chartjs": "^0.7.3",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.3",
